<resources>
    <string name="app_name">Heartfeels</string>
    <string name="title_activity_welcome">Heartfeels</string>
    <string name="welcome_title">Heartfeels</string>
    <string name="welcome_text">Begin the next experience in Music enjoyment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">746168512187418</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_password_confirmation">Confirm Password</string>
    <string name="user_first_name">First Name</string>
    <string name="user_Last_name">Last Name</string>
    <string name="register_disclaimer">By clicking Register you are indicating that you are read and agree to the Terms Of Service</string>
    <string name="userGender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_regiter">Register</string>
    <string name="title_activity_home">Tasks</string>
    <string name="not_found">Sorry, Heartfeels requires the use of a front-facing camera, which was not found on your device.</string>
    <string name="affectiva_logo_content_description">Heartfeels Logo</string>
    <string name="fps">FPS:</string>
    <string name="loading">Loading&#8230;</string>
    <string name="settings_content_description">Settings</string>
    <string name="insufficient_permissions">Insufficient Permissions</string>
    <string name="permissions_camera_needed_explanation">This app requires the permission to access your camera to be able to gather facial images for processing. No video is saved or used other than for immediate emotion processing.</string>
    <string name="permissions_storage_needed_explanation">This app requires the permission to access your external storage to save screenshots.</string>
    <string name="error">Error</string>
    <string name="understood">Understood</string>
    <string name="retry">Retry</string>
    <string name="clear_all">Clear All</string>
    <string name="metric_chooser_default_message">0 metrics chosen.</string>
    <string name="choose_six_message">Choose 6 emotions and expressions below to display on the main screen.</string>
    <string name="select_metrics_title">Select Metrics</string>
    <string name="select_metrics_message">Select emotions and expressions to display.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_message">Change application settings.</string>
    <string name="set_fps_title">Set Target FPS</string>
    <string name="set_fps_message">Set the desired processed frames per second.</string>
    <string name="fps_edittext_title">Processed Frames Per Second</string>
    <string name="show_tracking_title">Show Tracking Dots</string>
    <string name="show_tracking_message">Display tracking dots and bounding box.</string>
    <string name="show_appearance_title">Show Appearance Indicators</string>
    <string name="show_appearance_message">Display appearance markers adjacent to the bounding box.</string>
    <string name="show_fps_title">Show FPS</string>
    <string name="show_fps_message">Display the actual processed frames per second.</string>
    <string name="show_emoji_title">Show Emoji Indicators</string>
    <string name="show_emoji_message">Display emoji markers adjacent to the bounding box.</string>
    <string name="show_multiface_message">Track multiple people. A beta feature that is CPU intensive, and works only on newer devices.</string>
    <string name="show_multiface_title">Enable Multi-face mode</string>
    <string name="negative">NEGATIVE</string>
    <string name="positive">POSITIVE</string>
    <string name="no_songs">No songs found on your device.</string>
    <string name="empty_queue">No songs selected. Pick some from the library or enter random mode by tapping this message.</string>
    <string name="settings">Settings</string>
    <string name="library">Library</string>
    <string name="no_shuffle">No shuffle</string>
    <string name="shuffle_songs">Shuffle songs</string>
    <string name="shuffle_songs_continuously">Shuffle songs continuously</string>
    <string name="shuffle_albums">Shuffle albums</string>
    <string name="no_repeat">No repeat</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_current_song">Repeat current song</string>
    <string name="stop_current_song">Stop after current song</string>
    <string name="random">Random</string>
    <string name="random_enabling">Random enabled</string>
    <string name="song_load_failed">Failed to load song %s. It may be corrupt or missing.</string>
    <string name="queue_cleared">Queue cleared.</string>
    <string name="cover_art">Cover art</string>
    <string name="close_notification">Close notification</string>
    <string name="_genre">genre</string>
    <string name="_track">track</string>
    <string name="_composer">composer</string>
    <string name="_format">format</string>
    <string name="_title">title</string>
    <string name="_artist">artist</string>
    <string name="_album">album</string>
    <string name="_year">year</string>
    <string name="_replaygain">rgain</string>
    <string name="choose_playlist_name">Choose playlist name</string>
    <string name="create">Create</string>
    <string name="overwrite">Overwrite</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="delete_playlist">Delete playlist %s?</string>
    <string name="enqueue">Enqueue</string>
    <string name="enqueue_as_next">Play next</string>
    <string name="play">Play</string>
    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="save_as_playlist">Save as playlist…</string>
    <string name="add_to_playlist">Add to playlist…</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="playlist_favorites">Favorites</string>
    <string name="new_playlist">New playlist…</string>
    <string name="expand">Expand</string>
    <string name="delete">Delete</string>
    <string name="playback_view">Now playing</string>
    <string name="sort_by">Sort by</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="remove">Remove</string>
    <string name="clear_search">Clear search</string>
    <string name="play_or_enqueue">Enqueue if playing; Play if paused</string>
    <string name="open">Open</string>
    <plurals name="playing">
        <item quantity="one">1 song playing.</item>
        <item quantity="other">%d songs playing.</item>
    </plurals>
    <plurals name="enqueued">
        <item quantity="one">1 song enqueued.</item>
        <item quantity="other">%d songs enqueued.</item>
    </plurals>
    <plurals name="added_to_playlist">
        <item quantity="one">1 song added to playlist %2$s.</item>
        <item quantity="other">%1$d songs added to playlist %2$s.</item>
    </plurals>
    <plurals name="removed_from_playlist">
        <item quantity="one">1 song removed from playlist %2$s.</item>
        <item quantity="other">%1$d songs removed from playlist %2$s.</item>
    </plurals>
    <plurals name="deleted">
        <item quantity="one">1 song deleted.</item>
        <item quantity="other">%d songs deleted.</item>
    </plurals>
    <string name="delete_file_failed">Failed to delete %s.</string>
    <string name="deleted_item">\'%s\' deleted.</string>
    <string name="delete_item">Delete \'%s\'?</string>
    <string name="delete_file">Delete file \'%s\'?</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="genres">Genres</string>
    <string name="files">Files</string>
    <string name="none">None</string>
    <string name="unknown">Unknown</string>
    <string name="play_all">Play all</string>
    <string name="enqueue_all">Enqueue all</string>
    <string name="all_songs">All songs</string>
    <string name="more_from_artist">More from artist</string>
    <string name="more_from_album">More from album</string>
    <string name="name">Name</string>
    <string name="number_of_tracks">Number of tracks</string>
    <string name="year">Year</string>
    <string name="date_added">Date added</string>
    <string name="artist_album">Artist, album</string>
    <string name="artist_album_track">Artist, album, track number</string>
    <string name="artist_album_title">Artist, album, title</string>
    <string name="artist_year">Artist, year</string>
    <string name="album_track">Album, track number</string>
    <string name="song_playcount">Playcount</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="notification_title_paused">%s (Paused)</string>
    <plurals name="seconds">
        <item quantity="one">1 second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">1 hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="audio">Audio</string>
    <string name="volume_title">Volume</string>
    <string name="volume_during_ducking_title">Volume during notification</string>
    <string name="volume_during_ducking_summary">Playback volume: </string>
    <string name="ignore_audiofocus_loss_summary">Keep playing on permanent audio focus loss</string>
    <string name="media_button_title">Headset/Bluetooth controls</string>
    <string name="media_button_summary">This is also required for ICS lockscreen controls.</string>
    <string name="media_button_beep_title">Headset control beep</string>
    <string name="media_button_beep_summary">Beep after skipping a track with a headset control double click.</string>
    <string name="headset_only_title">External output only</string>
    <string name="headset_only_summary">Prevents music from being played through the internal speakers.</string>
    <string name="headset_pause_title">Pause when unplugged</string>
    <string name="headset_pause_summary">Pause when the headphones are unplugged.</string>
    <string name="headset_launch_title">Play when plugged</string>
    <string name="headset_launch_summary">Play when the headphones are plugged in. (Requires the \'Headphone detector\' app to be installed.)</string>
    <string name="notifications">Notifications</string>
    <string name="playback_screen">Playback screen</string>
    <string name="library_screen">Library screen</string>
    <string name="accelerometer_shake">Accelerometer shake</string>
    <string name="misc_features">Miscellaneous features</string>
    <string name="about">About</string>
</resources>