<?xml version="1.0" encoding="utf-8"?>

<!--
  - Copyright (c) 2016 Affectiva Inc.
  - See the file license.txt for copying permission.
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.alfitra.emotion.SettingsActivity$SettingsFragment"
        android:summary="@string/settings_message"
        android:title="@string/settings_title" />
    <header
        android:fragment="com.alfitra.emotion.MetricSelectionFragment"
        android:summary="@string/select_metrics_message"
        android:title="@string/select_metrics_title" />

    <header
        android:fragment="com.alfitra.musicplayer.ch.vanilla.PreferencesActivity$AudioFragment"
        android:title="@string/audio" />
    <header
        android:fragment="com.alfitra.musicplayer.ch.vanilla.PreferencesActivity$PlaybackFragment"
        android:title="@string/playback_screen" />
    <header
        android:fragment="com.alfitra.musicplayer.ch.vanilla.PreferencesActivity$LibraryFragment"
        android:title="@string/library_screen" />
    <header
        android:fragment="com.alfitra.musicplayer.ch.vanilla.PreferencesActivity$NotificationsFragment"
        android:title="@string/notifications" />
    <header
        android:fragment="com.alfitra.musicplayer.ch.vanilla.PreferencesActivity$ShakeFragment"
        android:title="@string/accelerometer_shake" />
    <header
        android:fragment="com.alfitra.musicplayer.ch.vanilla.PreferencesActivity$CoverArtFragment"
        android:title="@string/cover_art" />
    <header
        android:fragment="com.alfitra.musicplayer.ch.vanilla.PreferencesActivity$MiscFragment"
        android:title="@string/misc_features" />
    <header
        android:fragment="com.alfitra.musicplayer.ch.vanilla.PreferencesActivity$AboutFragment"
        android:title="@string/about" />
</preference-headers>