<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alfitra.heartfeels.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp" >

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress" >

                <requestFocus android:layout_width="wrap_content" />
            </EditText>

            <EditText
                android:id="@+id/userFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/user_first_name"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userLastName"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:hint="@string/user_Last_name" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/user_password"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/userPasswordCofirmation"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:hint="@string/user_password_confirmation" />

            <RelativeLayout
                android:id="@+id/layoutGender"
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblGender"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textSize="18sp"
                    android:text="@string/userGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioGroup
                    android:id="@+id/genderGroup"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/genderMale"
                        android:checked="true"
                        android:text="@string/gender_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/genderFemale"
                        android:text="@string/gender_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RadioGroup>


            </RelativeLayout>



            <EditText
                android:visibility="gone"
                android:id="@+id/userPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/user_password_confirmation"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/registerDisclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/register_disclaimer"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="registerNewAccount"
                android:text="@string/register" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>