<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="15dp"
tools:context="com.alfitra.heartfeels.WelcomeActivity"
    android:background="#0e1234">

<!--<TextView
    android:id="@+id/welcomeTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/welcome_title"
    android:textAppearance="?android:attr/textAppearanceLarge" />-->
    <ImageView
        android:id="@+id/heartfeels_trans"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="18sp"/>

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/info"/>

<TextView
    android:id="@+id/welcomeText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/welcome_text"
    android:layout_marginTop="20dp"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:layout_marginLeft="35dp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/register" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/login" />
</LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:background="#71b8d9" />

</LinearLayout>
